<resources>
    <string name="app_name">Game Picker</string>

    <!-- Game containers' titles -->
    <string name="popular">Популярное</string>
    <string name="open_world">Открытый мир</string>
    <string name="multiplayer">Мультиплеер</string>
    <string name="metacritic_choice">Выбор Metacritic</string>
    <string name="fromsoftware_games">Игры от FromSoftware</string>
    <string name="playstation_collection">Коллекция Playstation</string>

    <!-- Categories -->
    <string name="categories">Категории</string>
    <string name="categories_best">Лучшее</string>
    <string name="categories_popular">Популярное</string>
    <string name="categories_new">Новое</string>
    <string name="categories_genres">Жанры</string>
    <string name="categories_developers">Разработчики</string>
    <string name="categories_platforms">Платформы</string>

    <!-- Game Details -->
    <string name="game_details_about">Об игре</string>
    <string name="game_details_developers">Разработчики</string>
    <string name="game_details_genres">Жанры</string>
    <string name="game_details_platforms">Платформы</string>
    <string name="game_details_related">Похожие</string>
    <string name="game_details_released">Выпущена</string>
    <string name="game_details_tags">Тэги</string>
    <string name="game_details_screenshots">Скриншоты</string>

    <!-- Bottom navigation menu -->
    <string name="bottom_navigation_menu_home">Главная</string>
    <string name="bottom_navigation_menu_categories">Категории</string>
    <string name="bottom_navigation_menu_statistics">Статистика</string>
    <string name="bottom_navigation_menu_search">Поиск</string>

    <!-- Error messages -->
    <string name="error_message">Упс! Что-то пошло не так…</string>

    <!-- Content descriptions -->
    <string name="error_icon">Изображение ошибки</string>
    <string name="game_picture">Изображение игры</string>
    <string name="game_picture_shimmer">Загрузка изображения</string>
    <string name="game_text_shimmer">Загрузка текста</string>
    <string name="game_platform_icon_PC">Изображение платформы (ПК)</string>
    <string name="game_platform_icon_Playstation">Изображение платформы (Playstation)</string>
    <string name="game_platform_icon_Xbox">Изображение платформы (Xbox)</string>
    <string name="game_platform_icon_Mac_Os">Изображение платформы (MacOS)</string>
    <string name="genre_icon">Изображение с жанром</string>

</resources>