<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".presentation.categories.CategoriesFragment">

    <TextView
        android:id="@+id/textViewCategoriesHeader"
        style="@style/Widget.GamePicker.CategoriesHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categories" />

    <TextView
        android:id="@+id/textViewCategoriesBest"
        style="@style/Widget.GamePicker.CategoriesListItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categories_best"
        app:drawableStartCompat="@drawable/ic_categories_best" />

    <TextView
        android:id="@+id/textViewCategoriesPopular"
        style="@style/Widget.GamePicker.CategoriesListItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categories_popular"
        app:drawableStartCompat="@drawable/ic_categories_popular" />

    <TextView
        android:id="@+id/textViewCategoriesNew"
        style="@style/Widget.GamePicker.CategoriesListItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categories_new"
        app:drawableStartCompat="@drawable/ic_categories_new" />

    <TextView
        android:id="@+id/textViewCategoriesGenres"
        style="@style/Widget.GamePicker.CategoriesListItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categories_genres"
        app:drawableStartCompat="@drawable/ic_categories_genres" />

    <TextView
        android:id="@+id/textViewCategoriesDevelopers"
        style="@style/Widget.GamePicker.CategoriesListItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categories_developers"
        app:drawableStartCompat="@drawable/ic_categories_developers" />

    <TextView
        android:id="@+id/textViewCategoriesPlatforms"
        style="@style/Widget.GamePicker.CategoriesListItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/categories_platforms"
        app:drawableStartCompat="@drawable/ic_categories_platforms" />

</LinearLayout>